Update dashboard project cards

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -814,7 +814,7 @@ table {
 }
 
 .bg-blue-light {
-  background-color: #6cb2eb;
+  background-color: #8ae2fe;
 }
 
 .bg-blue-lighter {
@@ -1106,7 +1106,7 @@ table {
 }
 
 .hover\:bg-blue-light:hover {
-  background-color: #6cb2eb;
+  background-color: #8ae2fe;
 }
 
 .hover\:bg-blue-lighter:hover {
@@ -1398,7 +1398,7 @@ table {
 }
 
 .focus\:bg-blue-light:focus {
-  background-color: #6cb2eb;
+  background-color: #8ae2fe;
 }
 
 .focus\:bg-blue-lighter:focus {
@@ -1762,7 +1762,7 @@ table {
 }
 
 .border-blue-light {
-  border-color: #6cb2eb;
+  border-color: #8ae2fe;
 }
 
 .border-blue-lighter {
@@ -2054,7 +2054,7 @@ table {
 }
 
 .hover\:border-blue-light:hover {
-  border-color: #6cb2eb;
+  border-color: #8ae2fe;
 }
 
 .hover\:border-blue-lighter:hover {
@@ -2346,7 +2346,7 @@ table {
 }
 
 .focus\:border-blue-light:focus {
-  border-color: #6cb2eb;
+  border-color: #8ae2fe;
 }
 
 .focus\:border-blue-lighter:focus {
@@ -5101,7 +5101,7 @@ table {
 }
 
 .text-blue-light {
-  color: #6cb2eb;
+  color: #8ae2fe;
 }
 
 .text-blue-lighter {
@@ -5393,7 +5393,7 @@ table {
 }
 
 .hover\:text-blue-light:hover {
-  color: #6cb2eb;
+  color: #8ae2fe;
 }
 
 .hover\:text-blue-lighter:hover {
@@ -5685,7 +5685,7 @@ table {
 }
 
 .focus\:text-blue-light:focus {
-  color: #6cb2eb;
+  color: #8ae2fe;
 }
 
 .focus\:text-blue-lighter:focus {
@@ -6426,7 +6426,7 @@ table {
   }
 
   .sm\:bg-blue-light {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .sm\:bg-blue-lighter {
@@ -6718,7 +6718,7 @@ table {
   }
 
   .sm\:hover\:bg-blue-light:hover {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .sm\:hover\:bg-blue-lighter:hover {
@@ -7010,7 +7010,7 @@ table {
   }
 
   .sm\:focus\:bg-blue-light:focus {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .sm\:focus\:bg-blue-lighter:focus {
@@ -7366,7 +7366,7 @@ table {
   }
 
   .sm\:border-blue-light {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .sm\:border-blue-lighter {
@@ -7658,7 +7658,7 @@ table {
   }
 
   .sm\:hover\:border-blue-light:hover {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .sm\:hover\:border-blue-lighter:hover {
@@ -7950,7 +7950,7 @@ table {
   }
 
   .sm\:focus\:border-blue-light:focus {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .sm\:focus\:border-blue-lighter:focus {
@@ -10689,7 +10689,7 @@ table {
   }
 
   .sm\:text-blue-light {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .sm\:text-blue-lighter {
@@ -10981,7 +10981,7 @@ table {
   }
 
   .sm\:hover\:text-blue-light:hover {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .sm\:hover\:text-blue-lighter:hover {
@@ -11273,7 +11273,7 @@ table {
   }
 
   .sm\:focus\:text-blue-light:focus {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .sm\:focus\:text-blue-lighter:focus {
@@ -12000,7 +12000,7 @@ table {
   }
 
   .md\:bg-blue-light {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .md\:bg-blue-lighter {
@@ -12292,7 +12292,7 @@ table {
   }
 
   .md\:hover\:bg-blue-light:hover {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .md\:hover\:bg-blue-lighter:hover {
@@ -12584,7 +12584,7 @@ table {
   }
 
   .md\:focus\:bg-blue-light:focus {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .md\:focus\:bg-blue-lighter:focus {
@@ -12940,7 +12940,7 @@ table {
   }
 
   .md\:border-blue-light {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .md\:border-blue-lighter {
@@ -13232,7 +13232,7 @@ table {
   }
 
   .md\:hover\:border-blue-light:hover {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .md\:hover\:border-blue-lighter:hover {
@@ -13524,7 +13524,7 @@ table {
   }
 
   .md\:focus\:border-blue-light:focus {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .md\:focus\:border-blue-lighter:focus {
@@ -16263,7 +16263,7 @@ table {
   }
 
   .md\:text-blue-light {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .md\:text-blue-lighter {
@@ -16555,7 +16555,7 @@ table {
   }
 
   .md\:hover\:text-blue-light:hover {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .md\:hover\:text-blue-lighter:hover {
@@ -16847,7 +16847,7 @@ table {
   }
 
   .md\:focus\:text-blue-light:focus {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .md\:focus\:text-blue-lighter:focus {
@@ -17574,7 +17574,7 @@ table {
   }
 
   .lg\:bg-blue-light {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .lg\:bg-blue-lighter {
@@ -17866,7 +17866,7 @@ table {
   }
 
   .lg\:hover\:bg-blue-light:hover {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .lg\:hover\:bg-blue-lighter:hover {
@@ -18158,7 +18158,7 @@ table {
   }
 
   .lg\:focus\:bg-blue-light:focus {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .lg\:focus\:bg-blue-lighter:focus {
@@ -18514,7 +18514,7 @@ table {
   }
 
   .lg\:border-blue-light {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .lg\:border-blue-lighter {
@@ -18806,7 +18806,7 @@ table {
   }
 
   .lg\:hover\:border-blue-light:hover {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .lg\:hover\:border-blue-lighter:hover {
@@ -19098,7 +19098,7 @@ table {
   }
 
   .lg\:focus\:border-blue-light:focus {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .lg\:focus\:border-blue-lighter:focus {
@@ -21837,7 +21837,7 @@ table {
   }
 
   .lg\:text-blue-light {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .lg\:text-blue-lighter {
@@ -22129,7 +22129,7 @@ table {
   }
 
   .lg\:hover\:text-blue-light:hover {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .lg\:hover\:text-blue-lighter:hover {
@@ -22421,7 +22421,7 @@ table {
   }
 
   .lg\:focus\:text-blue-light:focus {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .lg\:focus\:text-blue-lighter:focus {
@@ -23148,7 +23148,7 @@ table {
   }
 
   .xl\:bg-blue-light {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .xl\:bg-blue-lighter {
@@ -23440,7 +23440,7 @@ table {
   }
 
   .xl\:hover\:bg-blue-light:hover {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .xl\:hover\:bg-blue-lighter:hover {
@@ -23732,7 +23732,7 @@ table {
   }
 
   .xl\:focus\:bg-blue-light:focus {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .xl\:focus\:bg-blue-lighter:focus {
@@ -24088,7 +24088,7 @@ table {
   }
 
   .xl\:border-blue-light {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .xl\:border-blue-lighter {
@@ -24380,7 +24380,7 @@ table {
   }
 
   .xl\:hover\:border-blue-light:hover {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .xl\:hover\:border-blue-lighter:hover {
@@ -24672,7 +24672,7 @@ table {
   }
 
   .xl\:focus\:border-blue-light:focus {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .xl\:focus\:border-blue-lighter:focus {
@@ -27411,7 +27411,7 @@ table {
   }
 
   .xl\:text-blue-light {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .xl\:text-blue-lighter {
@@ -27703,7 +27703,7 @@ table {
   }
 
   .xl\:hover\:text-blue-light:hover {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .xl\:hover\:text-blue-lighter:hover {
@@ -27995,7 +27995,7 @@ table {
   }
 
   .xl\:focus\:text-blue-light:focus {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .xl\:focus\:text-blue-lighter:focus {
