Add section class

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -572,6 +572,11 @@ table {
  * @import "components/forms";
  */
 
+.section {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .button {
   background-color: #47cdff;
   color: #fff;
